# solvation_free_energy

./: .gitignore  README.md  pyproject.toml
notebooks/: EDA.ipynb  data_extraction.ipynb  data_split.ipynb  ffnn_optimization.ipynb  fingerprint_EDA.ipynb  gcn_optimization.ipynb  model_opt_comparison.ipynb  models_base.txt  rfr_shap_plot.ipynb  shap_plot.ipynb  xgb_shap_plot.ipynb  xgbr_optimization.ipynb
src/: model_service.py  runner_builder.py
src/config/: .env  __init__.py  logger.py  model.py
src/model/: model_builder.py
src/model/pipeline/: collection.py  model.py  preparation.py
